--- a/questions.html
+++ b/questions.html
@@ -2,20 +2,85 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/questions.css">
+    <style media="screen">
+    .test-question{
+      margin:auto;
+      width: 100%;
+      max-width: 900px;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .statement {
+      color:black;
+      font-weight: 900;
+      text-align: center;
+      line-height: 1.5;
+    }
+    .decision{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 15px 0 15px;
+    }
+    #Introvert{
+      background-color: white;
+      border: 2px solid black;
+      margin-top: 20px;
+      margin-right: 20px;
+      padding: 3px;
+      text-align: justify;
+      position: relative;
+    }
+    #Observant{
+      background-color: white;
+      border: 2px solid black;
+      margin-top: 20px;
+      margin-right: 20px;
+      padding: 3px;
+      text-align: justify;
+      position: relative;
+    }
+    #Thinking{
+      background-color: white;
+      border: 2px solid black;
+      margin-top: 20px;
+      margin-right: 20px;
+      padding: 3px;
+      text-align: justify;
+      position: relative;
+    }
+    #Judging {
+    background-color: white;
+    border: 2px solid black;
+    margin-top: 20px;
+    margin-right: 20px;
+    padding: 3px;
+    text-align: justify;
+    position: relative;
+    }
+
+    </style>
     <title></title>
   </head>
   <body>
    <div class="test-question comp">
+     <!--Introvert/extrovert questions-->
+    <div id = "Introvert">
     <p class="statement">You enjoy vibrant social events will lots of people.</p>
+    <!--strongly disagree is an introvert-->
     <form class="decision">
      <input type="checkbox" name="event" value="SA"> Strongly agree
      <input type="checkbox" name="event" value="A"> Agree
      <input type="checkbox" name="event" value="N"> Neutral
      <input type="checkbox" name="event" value="D"> Disagree
-     <input type="checkbox" name="event" value="SD"> Strongly Disagree
+     <input type="checkbox" name="event" value="SD"> Strongly Disagre
     </form>
-    <p class="statement">You often spend time exploring unrealistic yet intriging ideas</p>
+    <p class="statement">At parties and similar events you can mostly be found farther away from the action.</p>
+    <!--strongly agree is an introvert-->
     <form class="decision">
      <input type="checkbox" name="ideas" value="SA"> Strongly agree
      <input type="checkbox" name="ideas" value="A"> Agree
@@ -23,7 +88,8 @@
      <input type="checkbox" name="ideas" value="D"> Disagree
      <input type="checkbox" name="ideas" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">If your friend is sad about something,your first instinct is to support them emotionally, not try to solve their problem.</p>
+    <p class="statement">When in a group of people you do not know, you have no problem jumping right into their conversation.</p>
+    <!--strongly disagree is an introvert-->
     <form class="decision">
      <input type="checkbox"name="emotional" value="SA"> Strongly agree
      <input type="checkbox"name="emotional" value="A"> Agree
@@ -31,7 +97,8 @@
      <input type="checkbox"name="emotional" value="D"> Disagree
      <input type="checkbox"name="emotional" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You often rely on what other people to be the ones to start a conversation.
+    <p class="statement">You feel more drawn to places with a busting and busy atmosphere than to a more quiet and intimate ones.</p>
+    <!--strongly disagree is an introvert-->
     <form class="decision class="decision"">
      <input type="checkbox" name="conversation" value="SA"> Strongly agree
      <input type="checkbox" name="conversation" value="A"> Agree
@@ -39,7 +106,8 @@
      <input type="checkbox" name="conversation" value="D"> Disagree
      <input type="checkbox" name="conversation" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You rarely worry if you made a good impression on someone you met.</p>
+    <p class="statement">When in a public place,you usually stick to quieter and less crowded areas.</p>
+    <!--strongly agree is an introvert-->
     <form class="decision">
      <input type="checkbox" name="impression" value="SA"> Strongly agree
      <input type="checkbox" name="impression" value="A"> Agree
@@ -47,7 +115,11 @@
      <input type="checkbox" name="impression" value="D"> Disagree
      <input type="checkbox" name="impression" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You are very affectionate with people you care about.</p>
+    </div>
+    <!--Intuitive/Observant questions-->
+    <div id= "Observant">
+    <p class="statement">You often spend time exploring unrealistic yet intriging ideas.</p>
+    <!--strongly disagree is Observant-->
     <form class="decision">
      <input type="checkbox" name="affection" value="SA"> Strongly agree
      <input type="checkbox" name="affection" value="A"> Agree
@@ -55,7 +127,8 @@
      <input type="checkbox" name="affection" value="D"> Disagree
      <input type="checkbox" name="affection" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You have a careful and methodical approach to life.</p>
+    <p class="statement">You like discussing different views and theories on what the world would look like in the future.</p>
+    <!--strongly disagree is Observant-->
     <form class="decision">
      <input type="checkbox" name="approach" value="SA"> Strongly agree
      <input type="checkbox" name="approach" value="A"> Agree
@@ -63,7 +136,8 @@
      <input type="checkbox" name="approach" value="D"> Disagree
      <input type="checkbox" name="approach" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">At parties and similar events you can mostly be found farther away from the acparty</p>
+    <p class="statement">You often drift away into day daydreaming about various ideas or scenarios.</p>
+    <!--strongly disagree is Observant-->
     <form class="decision">
      <input type="checkbox" name="party" value="SA"> Strongly agree
      <input type="checkbox" name="party" value="A"> Agree
@@ -71,7 +145,8 @@
      <input type="checkbox" name="party" value="D"> Disagree
      <input type="checkbox" name="party" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You often find it difficult to relate to people who let their emotions guide them.</p>
+    <p class="statement">You see yourself as more of a realist than a visionary.</p>
+    <!--strongly agree is Observant-->
     <form class="decision">
      <input type="checkbox" name="relations" value="SA"> Strongly agree
      <input type="checkbox" name="relations" value="A"> Agree
@@ -79,7 +154,8 @@
      <input type="checkbox" name="relations" value="D"> Disagree
      <input type="checkbox" name="relations" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">When in a group of people you don't know,you have no problem jumping right into their conversation</p>
+    <p class="statement">You frequently find yourself wondering how technological advancement could change everyday life.</p>
+    <!--strongly disagree is Observant-->
     <form class="decision">
      <input type="checkbox" name="jump into conversations" value="SA"> Strongly agree
      <input type="checkbox" name="jump into conversations" value="A"> Agree
@@ -87,7 +163,11 @@
      <input type="checkbox" name="jump into conversations" value="D"> Disagree
      <input type="checkbox" name="jump into conversations" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">If you make a mistake,you tend to start doubting yourself, your abilities or your knowledge.</p>
+    </div>
+    <!--Feeling/Thinking questions-->
+    <div id="Thinking">
+    <p class="statement">When it comes to making life-changing choices,you mostly listen to your heart rather than your head.</p>
+    <!--strongly disagree is Thinking-->
     <form class="decision">
      <input type="checkbox" name="" value="SA"> Strongly agree
      <input type="checkbox" name="" value="A"> Agree
@@ -95,7 +175,8 @@
      <input type="checkbox" name="" value="D"> Disagree
      <input type="checkbox" name="" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">When at a social event you rarely try to introduce yourself to new people and mostly talk to the ones you already know.</p>
+    <p class="statement">You often make decisions on a whim.</p>
+    <!--strongly disagree is Thinking-->
     <form class="decision">
      <input type="checkbox" name="" value="SA"> Strongly agree
      <input type="checkbox" name="" value="A"> Agree
@@ -103,119 +184,8 @@
      <input type="checkbox" name="" value="D"> Disagree
      <input type="checkbox" name="" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You feel more drawn to places with a busting and busy atmosphere than to more quiet and intimate ones.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You like discussing different views and theories on what the world could look like in the future.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">When it comes to making life-changing choices, you mostly listen to your heart rather than your head.</p>
-    <form class="decision class="decision"">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You usually prefer to get your revenge rather than forgive.</p>
-    <form class="decision class="decision"">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You always know exactly what you want.</p>
-    <form class="decision class="decision"">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You rarely think back on the choices you made and wonder what you could have done differently.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">When in a public place, you usually stick to quieter and less crowded areas.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">When starting to work on a project, you prefer to make as many decisions upfront as possible.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">When you know someone thinks highly of you, you also wonder how long it will be untill they become disappointed in you.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You often drift away into daydreaming about various ideas or scenarios.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">Even when you have planned a particular daily routine,you usually just end up doing what you feel like at any given moment.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You often talk about your own feelings and emotions.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You have a detailed education or career development plans stretching several years into the future.</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You see yourself as more of a realist than a visionary</p>
-    <form class="decision">
-     <input type="checkbox" name="" value="SA"> Strongly agree
-     <input type="checkbox" name="" value="A"> Agree
-     <input type="checkbox" name="" value="N"> Neutral
-     <input type="checkbox" name="" value="D"> Disagree
-     <input type="checkbox" name="" value="SD"> Strongly Disagree
-    </form>
-    <p class="statement">You find it easy to empathize with a person who has gone through something you never have.</p>
+    <p class="statement">You often have a hard time understanding other people's feelings.</p>
+    <!--strongly disagree is Thinking-->
     <form class="decision">
      <input type="checkbox" name="" value="SA"> Strongly agree
      <input type="checkbox" name="" value="A"> Agree
@@ -224,6 +194,7 @@
      <input type="checkbox" name="" value="SD"> Strongly Disagree
     </form>
     <p class="statement">Your emotions control you more than you control them.</p>
+    <!--strongly disagree is Thinking-->
     <form class="decision">
      <input type="checkbox" name="" value="SA"> Strongly agree
      <input type="checkbox" name="" value="A"> Agree
@@ -231,7 +202,38 @@
      <input type="checkbox" name="" value="D"> Disagree
      <input type="checkbox" name="" value="SD"> Strongly Disagree
     </form>
-    <p class="statement">You always consider how your actions might affect other people before doing something.</p>
+    <p class="statement">You still honor the commitments you have made even if you have a change of heart.</p>
+    <!--strongly disagree is Thinking-->
+    <form class="decision class="decision"">
+     <input type="checkbox" name="" value="SA"> Strongly agree
+     <input type="checkbox" name="" value="A"> Agree
+     <input type="checkbox" name="" value="N"> Neutral
+     <input type="checkbox" name="" value="D"> Disagree
+     <input type="checkbox" name="" value="SD"> Strongly Disagree
+    </form>
+    </div>
+    <!--Judging/Prospecting questions-->
+    <div id="Judging">
+    <p class="statement">Your travel plans are more likely to look like a rough list of ideas than a detailed itinerary.</p>
+    <!--strongly disagree is Judging-->
+    <form class="decision class="decision"">
+     <input type="checkbox" name="" value="SA"> Strongly agree
+     <input type="checkbox" name="" value="A"> Agree
+     <input type="checkbox" name="" value="N"> Neutral
+     <input type="checkbox" name="" value="D"> Disagree
+     <input type="checkbox" name="" value="SD"> Strongly Disagree
+    </form>
+    <p class="statement">If you have to temporarily put your plans on hold,you make sure it is your top priority to get back on track as soon as possible.</p>
+    <!--strongly agree is Judging-->
+    <form class="decision class="decision"">
+     <input type="checkbox" name="" value="SA"> Strongly agree
+     <input type="checkbox" name="" value="A"> Agree
+     <input type="checkbox" name="" value="N"> Neutral
+     <input type="checkbox" name="" value="D"> Disagree
+     <input type="checkbox" name="" value="SD"> Strongly Disagree
+    </form>
+    <p class="statement">When starting to work on a project, you prefer to make as many decisions upfront as possible.</p>
+    <!--strongly agree is Judging-->
     <form class="decision">
      <input type="checkbox" name="" value="SA"> Strongly agree
      <input type="checkbox" name="" value="A"> Agree
@@ -239,6 +241,25 @@
      <input type="checkbox" name="" value="D"> Disagree
      <input type="checkbox" name="" value="SD"> Strongly Disagree
     </form>
+    <p class="statement">Even when you have planned a particular daily routine, you usually just end up doing what you feel like at any given moment.</p>
+    <!--strongly disagree is Judging-->
+    <form class="decision">
+     <input type="checkbox" name="" value="SA"> Strongly agree
+     <input type="checkbox" name="" value="A"> Agree
+     <input type="checkbox" name="" value="N"> Neutral
+     <input type="checkbox" name="" value="D"> Disagree
+     <input type="checkbox" name="" value="SD"> Strongly Disagree
+    </form>
+    <p class="statement">Your personal work style is closer to spontaneous bursts of energy than to organised and consistent efforts.</p>
+    <!--strongly disagree is Judging-->
+    <form class="decision">
+     <input type="checkbox" name="" value="SA"> Strongly agree
+     <input type="checkbox" name="" value="A"> Agree
+     <input type="checkbox" name="" value="N"> Neutral
+     <input type="checkbox" name="" value="D"> Disagree
+     <input type="checkbox" name="" value="SD"> Strongly Disagree
+    </form>
+    </div>
     </div>
   </body>
 </html>
