--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
       </nav>
     <div id="land">
       <div class="overlay">
-        <h1 class="text text-white text-center text-uppercase">"find out your personality"</h1>
+        <h1 class="text text-white text-center text-uppercase">find out your personality</h1>
         <h4 class="text text-uppercase text-white text-center">dont waste time trying to live other peoples life find out who you are</h4>
-        <button class="btn btn-outline-secondary btn-lg ">TAKE QUIZ!</button>
+        <a href="one.html">
+        <button class="btn btn-outline-secondary btn-lg wiggle">TAKE QUIZ!</button>
+      </a>
+      
 
       </div>
       
