--- a/five.html
+++ b/five.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/questions.css">
-    <script src="js/scripts1.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/scripts1.js"></script>
 
 </head>
 <body>
