--- a/four.html
+++ b/four.html
@@ -6,15 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/questions.css">
-    <script src="js/scripts1.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/scripts1.js"></script>
 
 </head>
 <body>
     <!--Judging/Prospecting questions-->
-    <div id="Judging">
+    <div id="Judging" >
         <p class="statement">Your travel plans are more likely to look like a rough list of ideas than a detailed itinerary.</p>
         <!--strongly disagree is Judging-->
-        <form class="decision">
+        <form class="decision"method="GET" action="getmethod.php">
           <input type="radio" name="travelPlans" id="SA" value="2" required onclick="introversion()"> Strongly agree
           <input type="radio" name="travelPlans" id="A" value="1" required onclick="introversion()"> Agree
           <input type="radio" name="travelPlans" id="N" value="0" required onclick="introversion()"> Neutral
@@ -23,23 +24,23 @@
         </form>
         <p class="statement">If you have to temporarily put your plans on hold,you make sure it is your top priority to get back on track as soon as possible.</p>
         <!--strongly agree is Judging-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
           <input type="radio" name="priorities" id="SA" value="-2" required onclick="introversion()"> Strongly agree
           <input type="radio" name="priorities" id="A" value="-1" required onclick="introversion()"> Agree
           <input type="radio" name="priorities" id="N" value="0" required onclick="introversion()"> Neutral
           <input type="radio" name="priorities" id="D" value="1" required onclick="introversion()"> Disagree
           <input type="radio" name="priorities" id="SD" value="2" required onclick="introversion()"> Strongly Disagree
         </form>
-        <p class="statement">When starting to work on a project, you prefer to make as many decisions upfront as possible.</p>
+        <p class="statement" method="GET" action="getmethod.php">When starting to work on a project, you prefer to make as many decisions upfront as possible.</p>
         <!--strongly agree is Judging-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
           <input type="radio" name="projectDecisions" id="SA" value="-2" required onclick="introversion()"> Strongly agree
           <input type="radio" name="projectDecisions" id="A" value="-1" required onclick="introversion()"> Agree
           <input type="radio" name="projectDecisions" id="N" value="0" required onclick="introversion()"> Neutral
           <input type="radio" name="projectDecisions" id="D" value="1" required onclick="introversion()"> Disagree
           <input type="radio" name="projectDecisions" id="SD" value="2" required onclick="introversion()"> Strongly Disagree
         </form>
-        <p class="statement">Even when you have planned a particular daily routine, you usually just end up doing what you feel like at any given moment.</p>
+        <p class="statement" method="GET" action="getmethod.php">Even when you have planned a particular daily routine, you usually just end up doing what you feel like at any given moment.</p>
         <!--strongly disagree is Judging-->
         <form class="decision">
           <input type="radio" name="dailyPlans" id="SA" value="2" required onclick="introversion()"> Strongly agree
@@ -48,7 +49,7 @@
           <input type="radio" name="dailyPlans" id="D" value="-1" required onclick="introversion()"> Disagree
           <input type="radio" name="dailyPlans" id="SD" value="-2" required onclick="introversion()"> Strongly Disagree
         </form>
-        <p class="statement">Your personal work style is closer to spontaneous bursts of energy than to organised and consistent efforts.</p>
+        <p class="statement"method="GET" action="getmethod.php">Your personal work style is closer to spontaneous bursts of energy than to organised and consistent efforts.</p>
         <!--strongly disagree is Judging-->
         <form class="decision">
           <input type="radio" name="energyBursts" id="SA" value="2" required onclick="introversion()"> Strongly agree
@@ -60,7 +61,7 @@
 
         <a href="four.html"></a>
       <a href="three.html" class="previous">&laquo; Previous</a>
-      <a href="five.html" class="next" >Next &raquo;</a>
+      <a href="five.html" class="next" >Get results &raquo;</a>
 
 </body>
 </html>
