--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="overlay">
         <h1 class="text text-white text-center text-uppercase">find out your personality</h1>
         <h4 class="text text-uppercase text-white text-center">dont waste time trying to live other peoples life find out who you are</h4>
-        <a href="one.html">
+        <a href="questions.html">
         <button class="btn btn-outline-secondary btn-lg wiggle">TAKE QUIZ!</button>
       </a>
       
