--- a/one.html
+++ b/one.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/questions.css">
-    <script src="js/scripts1.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/scripts1.js"></script>
 
 </head>
 <body>
 
-<div class="test-question comp">
+<div class="test-question comp" >
     <!--Introvert/extrovert questions-->
-   <div id = "Introvert">
-     <p class="statement">You enjoy vibrant social events will lots of people.</p>
+   <div id = "Introvert" >
+     <p class="statement" method="GET">You enjoy vibrant social events will lots of people.</p>
      <!--strongly disagree is an introvert-->
-     <form class="decision">
+     <form class="decision " method="GET" action="getmethod.php">
        <input type="radio" name="socialEvents" id="SA" value="2" required onclick="introversion()"> Strongly agree
        <input type="radio" name="socialEvents" id="A" value="1" required onclick="introversion()"> Agree
        <input type="radio" name="socialEvents" id="N" value="0" required onclick="introversion()"> Neutral
@@ -24,7 +25,7 @@
      </form>
      <p class="statement">At parties and similar events you can mostly be found farther away from the action.</p>
      <!--strongly agree is an introvert-->
-     <form class="decision">
+     <form class="decision"method="GET" action="getmethod.php">
        <input type="radio" name="ideas" id="SA" value="-2" required onclick="introversion()"> Strongly agree
        <input type="radio" name="ideas" id="A" value="-1" required onclick="introversion()"> Agree
        <input type="radio" name="ideas" id="N" value="0" required onclick="introversion()"> Neutral
@@ -33,7 +34,7 @@
      </form>
      <p class="statement">When in a group of people you do not know, you have no problem jumping right into their conversation.</p>
      <!--strongly disagree is an introvert-->
-     <form class="decision">
+     <form class="decision"method="GET" action="getmethod.php">
        <input type="radio" name="easyConversations" id="SA" value="2"required onclick="introversion()"> Strongly agree
        <input type="radio" name="easyConversations" id="A" value="1" required onclick="introversion()"> Agree
        <input type="radio" name="easyConversations" id="N" value="0" required onclick="introversion()"> Neutral
@@ -42,7 +43,7 @@
      </form>
      <p class="statement">You feel more drawn to places with a busting and busy atmosphere than to a more quiet and intimate ones.</p>
      <!--strongly disagree is an introvert-->
-     <form class="decision">
+     <form class="decision" method="GET" action="getmethod.php">
        <input type="radio" name="atmospheres" id="SA" value="2" required onclick="introversion()" > Strongly agree
        <input type="radio" name="atmospheres" id="A"  value="1" required onclick="introversion()" > Agree
        <input type="radio" name="atmospheres" id="N"  value="0" required onclick="introversion()" > Neutral
@@ -51,7 +52,7 @@
      </form>
      <p class="statement">When in a public place,you usually stick to quieter and less crowded areas.</p>
      <!--strongly agree is an introvert-->
-     <form class="decision">
+     <form class="decision"method="GET" action="getmethod.php">
        <input type="radio" name="publicAreas" id="SA" value="-2" required onclick="introversion()" > Strongly agree
        <input type="radio" name="publicAreas" id="A" value="-1" required onclick="introversion()" > Agree
        <input type="radio" name="publicAreas" id="N"  value="0" required onclick="introversion()" > Neutral
