--- a/questions.html
+++ b/questions.html
@@ -3,74 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/questions.css">
-    <script src="js/scripts1.js"></script>
-    <style media="screen">
-    .test-question{
-      margin:auto;
-      width: 100%;
-      max-width: 900px;
-      display:flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-    .statement {
-      color:black;
-      font-weight: 900;
-      text-align: center;
-      line-height: 1.5;
-    }
-    .decision{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 15px 0 15px;
-    }
-    #Introvert{
-      background-color: white;
-      border: 2px solid black;
-      margin-top: 20px;
-      margin-right: 20px;
-      padding: 3px;
-      text-align: justify;
-      position: relative;
-    }
-    #Observant{
-      background-color: white;
-      border: 2px solid black;
-      margin-top: 20px;
-      margin-right: 20px;
-      padding: 3px;
-      text-align: justify;
-      position: relative;
-    }
-    #Thinking{
-      background-color: white;
-      border: 2px solid black;
-      margin-top: 20px;
-      margin-right: 20px;
-      padding: 3px;
-      text-align: justify;
-      position: relative;
-    }
-    #Judging {
-    background-color: white;
-    border: 2px solid black;
-    margin-top: 20px;
-    margin-right: 20px;
-    padding: 3px;
-    text-align: justify;
-    position: relative;
-    }
-  .results {
-    display: none;
-  }
-
-    </style>
     <title></title>
+    <script src="js/scripts1.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/questions.css">
+    
   </head>
   <body>
+    <div id="work">
+      <h1 class="h1 text-capitalize text-center font-weight-bolder text-white">fill in to find you personality</h1>
    <div class="test-question comp">
      <!--Introvert/extrovert questions-->
     <div id = "Introvert">
@@ -274,9 +215,10 @@
       <input type="radio" name="energyBursts" id="D" value="-1" required onclick="introversion()"> Disagree
       <input type="radio" name="energyBursts" id="SD" value="-2" required onclick="introversion()"> Strongly Disagree
     </form>
-    <button type="button" id="resultsButton" onclick="introversion()">Get Results</button>
+    <!-- <button type="button" id="resultsButton text-center" onclick="introversion()">Get Results</button> -->
+   
     <div id="results">
-      <h>RESULTS</h>
+      <h6 class="text text-center font-weight-bold">RESULTS</h6>
       <p>Your personality type is <span id="introExtroLetter"></span><span id="intuSensoLetter"></span><span id="thinkFeelLetter"></span><span id="judgeProsLetter"></span></p>
       <p></p>
       <p id="introversionExtroversionTrait"></p>
@@ -291,5 +233,6 @@
     </div>
     </div>
     </div>
+  </div>
   </body>
 </html>
