--- a/three.html
+++ b/three.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" href="css/questions.css">
-    <script src="js/scripts1.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/scripts1.js"></script>
 
 </head>
 <body>
     <div id="Thinking">
         <p class="statement">When it comes to making life-changing choices,you mostly listen to your heart rather than your head.</p>
         <!--strongly disagree is Thinking-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
          <input type="radio" name="followHearts" id="SA"  value="2" required onclick="introversion()"> Strongly agree
          <input type="radio" name="followHearts" id="A" value="1" required onclick="introversion()"> Agree
          <input type="radio" name="followHearts" id="N" value="0" required onclick="introversion()"> Neutral
@@ -23,7 +24,7 @@
         </form>
         <p class="statement">You often make decisions on a whim.</p>
         <!--strongly disagree is Thinking-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
          <input type="radio" name="whims" id="SA" value="2" required onclick="introversion()"> Strongly agree
          <input type="radio" name="whims" id="A" value="1" required onclick="introversion()"> Agree
          <input type="radio" name="whims" id="N" value="0" required onclick="introversion()"> Neutral
@@ -32,7 +33,7 @@
         </form>
         <p class="statement">You often have a hard time understanding other people's feelings.</p>
         <!--strongly disagree is Thinking-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
          <input type="radio" name="feelings" id="SA" value="-2" required onclick="introversion()"> Strongly agree
          <input type="radio" name="feelings" id="A" value="-1" required onclick="introversion()"> Agree
          <input type="radio" name="feelings" id="N" value="0" required onclick="introversion()"> Neutral
@@ -41,7 +42,7 @@
         </form>
         <p class="statement">Your emotions control you more than you control them.</p>
         <!--strongly disagree is Thinking-->
-        <form class="decision">
+        <form class="decision" method="GET" action="getmethod.php">
          <input type="radio" name="emotions" id="SA" value="2" required onclick="introversion()"> Strongly agree
          <input type="radio" name="emotions" id="A" value="1" required onclick="introversion()"> Agree
          <input type="radio" name="emotions" id="N" value="0" required onclick="introversion()"> Neutral
@@ -50,7 +51,7 @@
         </form>
         <p class="statement">You still honor the commitments you have made even if you have a change of heart.</p>
         <!--strongly disagree is Thinking-->
-        <form class="decision">
+        <form class="decision"method="GET" action="">
          <input type="radio" name="commitments" id="SA" value="-2" required onclick="introversion()"> Strongly agree
          <input type="radio" name="commitments" id="A" value="-1" required onclick="introversion()"> Agree
          <input type="radio" name="commitments" id="N" value="0" required onclick="introversion()"> Neutral
