--- a/questions.html
+++ b/questions.html
@@ -8,6 +8,7 @@
     <script src="js/scripts1.js"></script>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="css/questions.css">
+    <link rel="icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.xY5OHvfKStEs3kS2woU6eAHaHa%26pid%3DApi&f=1"> 
     
   </head>
   <body>
